[package]
name = "longest-common-substring"
version = "0.1.0"
authors = ["Nate Armstrong <naterarmstrong@gmail.com>"]
description = "A program to find the longest common bytestring in linear time within a subset of files."
readme = "README.md"
repository = "https://github.com/naterarmstrong/longest-common-substring"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suffix_array = "0.5.0"
clap = "3.1.6"